--- a/Day1/Day1.1/Lab1.html
+++ b/Day1/Day1.1/Lab1.html
@@ -10,8 +10,8 @@
 
 function login()
 {
-  let uname = document.getElementById("username").value
-  let pword = document.getElementById("password").value
+  let uname = document.getElementById("username").value;
+  let pword = document.getElementById("password").value;
   if(uname == "admin" && pword == "admin")
   {
     let alert = <label style={{color: 'green'}}> Valid user name </label>;
